Fix squash content on small screen in hero

--- a/_includes/custom.css
+++ b/_includes/custom.css
@@ -51,7 +51,6 @@ p {
 .hero {
   position: relative;
   width: 100%;
-  min-height: 60vh; /* ensures it's tall enough on large screens */
   height: auto; /* allows content to expand */
 
   overflow: hidden;
